--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
+    <script src="rock.js" defer></script>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -23,5 +24,4 @@
         </div>
 
     </body>
-    <script src="rock.js" ></script>
 </html>
