--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
+
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="styles.css">
-</head>
+    </head>
 
     <body>
 
@@ -22,6 +24,59 @@
 
         </div>
 
-    </body>
-    <script src="rock.js" ></script>
+    <script>
+          function computerPlay() {
+    let rock = "Rock";
+    let paper = "Paper";
+    let scissors = "Scissors";
+    let getRandomValue = Math.random();
+
+    if (getRandomValue <= 0.33) {
+      return rock;
+    } else if (getRandomValue <= 0.66) {
+      return paper;
+    } else {
+      return scissors;
+    }
+  }
+
+  function playRound (firstLetterCap, computerSelection) {
+    let tie = "It's a Tie! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let paperBeatRock = "You win! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let scissorsBeatPaperLoss = "You lose! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let paperBeatRockLoss = "You win! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let rockBeatScissors = "You win! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let rockbeatScissorsLoss = "You lose! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+    let scissorsBEatPaper = "You win! You selected " + firstLetterCap + " and the computer selected" + computerSelection + ".";
+  
+    if (firstLetterCap === computerSelection) {
+      return tie;
+    } else if ((firstLetterCap === "Paper") && (computerSelection === "Rock")) {
+        return paperBeatRock;
+    } else if ((firstLetterCap === "Paper") && (computerSelection === "Scissors")) {
+      return scissorsBeatPaperLoss;
+    } else if ((firstLetterCap === "Rock") && (computerSelection === "Paper")) {
+      return paperBeatRockLoss;
+    } else if ((firstLetterCap === "Rock") && (computerSelection === "Scissors")) {
+      return paperBeatRock;
+    } else if ((firstLetterCap === "Scissors") && (computerSelection === "Rock")) {
+      return paperBeatRockLoss;
+    } else {
+      return scissorsBeatPaper;
+    }
+  
+  }
+
+    function capitalise(playerSelection) {
+        let allowLowerCase = playerSelection.toLowerCase();
+        let firstLetterCap = allowLowerCase.charAt(0).toUpperCase() + allowLowerCase.slice(1);
+        return firstLetterCap;
+  }
+
+    const playerSelection = "rock";
+    const computerSelection = computerPlay();
+    console.log(playRound(capitalise(playerSelection), computerSelection))
+    </script>
+
+</body>
 </html>
