--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+    <script src='rps.js' defer></script>
+    <title>Rock Paper Scissors Game</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
     <body>
+        
+        <h1>Welcome to Rock, Paper, Scissors! The winner is decided by whoever reaches the best of 5!</h1>
 
-
-        <script src='rps.js'></script>
+        <div id="container">
+            <button id="1" class="Rock">Rock</button>
+            <button id="2" class="Paper">Paper</button>
+            <button id="3" class="Scissors">Scissors</button>
+        </div>
     </body>
-
-    
 </html>
