--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
     <body>
         
-        <h1>Welcome to Rock, Paper, Scissors! The winner is decided by whoever reaches the best of 5!</h1>
+        <h1>Welcome to Rock, Paper, Scissors! The winner is decided by whoever wins 5 times, first!</h1>
 
         <div id="container">
             <button id="1" class="Rock">Rock</button>
